Agent, Robots functions

--- a/front-example/src/main/resources/i18n/app.properties
+++ b/front-example/src/main/resources/i18n/app.properties
@@ -1,5 +1,7 @@
 hello=Hello
 view.inbox.global=Bandeja de Tareas - Global
 view.inbox.personal=Bandeja de Tareas - Personal
-view.inbox.debug=Depuración
 view.inbox.operations=Operaciones
+view.inbox.debug=Información de depuración
+view.inbox.robots=Centro de control de robots
+view.inbox.appindex=Catalogo de aplicaciones
