--- a/front-layout-main/src/main/resources/META-INF/resources/i18n/app.properties
+++ b/front-layout-main/src/main/resources/META-INF/resources/i18n/app.properties
@@ -2,3 +2,5 @@ hello=Hello
 view.inbox.global=Bandeja de Tareas - Global
 view.inbox.personal=Bandeja de Tareas - Personal
 view.inbox.operations=Operaciones
+view.inbox.debug=Información de depuración
+view.inbox.robots=Centro de control de robots
